[package]
name = "field_count_derive"
version = "0.2.0"
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
description = "Derive the field count for a struct"
repository = "https://github.com/discosultan/field-count"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
